--- a/chat/index.html
+++ b/chat/index.html
@@ -406,15 +406,15 @@
                 </div>
             </div> -->
 
-            <!-- <div class="card">
-                <div class="card-label">本地信息</div>
-                <div class="help-text">我的 Peer ID</div>
+            <div class="card">
+                <div class="card-label">Info</div>
+                <div class="help-text">Peer ID</div>
                 <div class="id-badge">
-                    <span>你：</span>
+                    <span>Status:</span>
                     <span id="my-id" class="id-code">尚未连接</span>
                 </div>
-                <div class="help-text" style="margin-top:6px;">对方连接到同一房间后，本页面不会经过任何额外服务器中转聊天内容。</div>
-            </div> -->
+                <!-- <div class="help-text" style="margin-top:6px;">对方连接到同一房间后，本页面不会经过任何额外服务器中转聊天内容。</div> -->
+            </div>
 
             <!-- <div class="footer">
                 使用 <a href="https://peerjs.com" target="_blank" rel="noopener noreferrer">PeerJS 公共信令服务</a>
