--- a/chat/index.html
+++ b/chat/index.html
@@ -408,7 +408,7 @@
 
             <div class="card">
                 <div class="card-label">Info</div>
-                <div class="help-text">Peer ID</div>
+                <div class="help-text">Connection ID</div>
                 <div class="id-badge">
                     <span>Status:</span>
                     <span id="my-id" class="id-code">尚未连接</span>
