--- a/cg/index.html
+++ b/cg/index.html
@@ -370,7 +370,7 @@ Computer Graphics</font></b></p>
 		<ul>
 			<li>
 			<p align="left"><font size="4" face="Times New Roman">
-			2025年6月6日：【课程知识点思维导图】已发布：<a href="https://bnu-3dv-lab.feishu.cn/wiki/HXBawRAtciCYedkoj7ZctcmLnJg#mindmap" target="_blank">思维导图</a></font></p></li>
+			2025年6月6日：【课程知识点思维导图】已发布：<a href="mindmap/" target="_blank">思维导图</a></font></p></li>
 			<li>
 			<p align="left"><font size="4" face="Times New Roman">
 			2025年2月25日：【课程主页】本课程的主页已搭建，后续添加模块和内容</font></p></li>
